Uploaded image for project: 'Qpid Proton'
  1. Qpid Proton
  2. PROTON-974

single symbol for mechanisms in sasl-mechanisms not recognised

    XMLWordPrintableJSON

Details

    • Bug
    • Status: Closed
    • Major
    • Resolution: Fixed
    • proton-0.10
    • proton-0.11.0
    • proton-c
    • None

    Description

      E.g. if a broker sends a sasl-mechanisms frame with a single symbol as the value of the mechanisms field, then it appears that the cyrus-sasl support in proton-c doesn't recognise that offered mechanism

      [0x2605d80]:  -> SASL
      [0x2605d80]:  <- SASL
      [0x2605d80]:0 <- @sasl-mechanisms(64) [sasl-server-mechanisms=:ANONYMOUS]
      [0x2605d80]:sasl error: SASL(-4): no mechanism available: No worthy mechs found
      [0x2605d80]:ERROR amqp:unauthorized-access Authentication failed
      [0x2605d80]:  -> EOS
      ERROR:root:amqp:unauthorized-access: Authentication failed
      

      From the spec, section 1.4:

      The multiple attribute of a field description controls whether multiple element values are permitted in the representation. A single element of the type specified in the field description is always permitted. Multiple values are represented by the use of an array where the type of the elements in the array is the type defined in the field definition.

      Attachments

        Activity

          People

            astitcher Andrew Stitcher
            gsim Gordon Sim
            Votes:
            0 Vote for this issue
            Watchers:
            4 Start watching this issue

            Dates

              Created:
              Updated:
              Resolved: