PROTON-974: Accept a single symbol in SASL mechs frame - As well as an array of symbols - This is a specific interop issue with qpidd AMQP 1.0 support